infra/commands-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: ernestkahnwald/commandservicedepl:latest
---
apiVersion: v1
kind: Service
metadata:
  name: commands-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
  - name: commandservice
    port: 80
    targetPort: 8080
