infra/platforms-delp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: ernestkahnwald/platformservicedepl:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: platformgrpc
    protocol: TCP
    port: 716
    targetPort: 716
