infra/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: ingress-srv
spec:
  rules:
  - host: wtf.com
    http:
      paths:
      - pathType: Prefix
        path: "/platforms"
        backend:
          service:
            name: platforms-cluster-ip-service
            port:
              number: 80
      - pathType: Prefix
        path: "/c/platforms"
        backend:
          service:
            name: commands-cluster-ip-service
            port:
              number: 80
